force-app/main/default/objects/COMM_ProductSynchronizationFieldConvert__mdt/COMM_ProductSynchronizationFieldConvert__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to store conversion mapping of values between Salesforce and Commerce during Product Synchronization</description>
    <label>Product Synchronization Field Convert</label>
    <pluralLabel>Product Synchronization Field Converts</pluralLabel>
</CustomObject>