force-app/main/default/objects/COMM_ProductSynchronizationFieldConvert__mdt/fields/COMM_CommerceValue__c.field-meta.xml
<CustomField>
    <fullName>COMM_CommerceValue__c</fullName>
    <description>Value store in Commerce</description>
    <label>Commerce Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>