force-app/main/default/objects/COMM_ProductSynchronizationFieldConvert__mdt/fields/COMM_IntegrationApiName__c.field-meta.xml
<CustomField>
    <fullName>COMM_IntegrationApiName__c</fullName>
    <description>API Name of the field used in integration (OCAPI)</description>
    <label>Integration API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>