force-app/main/default/objects/COMM_ProductSynchronizationFieldConvert__mdt/fields/COMM_SalesforceValue__c.field-meta.xml
<CustomField>
    <fullName>COMM_SalesforceValue__c</fullName>
    <description>Value stored in Salesforce</description>
    <label>Salesforce Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>