force-app/main/default/objects/COMM_ProductSynchronizationFieldConvert__mdt/listViews/COMM_LV_All.listView-meta.xml
<ListView>
    <fullName>COMM_LV_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>COMM_IntegrationApiName__c</columns>
    <columns>COMM_SalesforceValue__c</columns>
    <columns>COMM_CommerceValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>